--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-select": "^4.1.0",
     "react-slick": "^0.28.0",
